--- a/sites/auroranewsregister.com/themes/news_center/css/ie-mobile-landscape-layout.css
+++ b/sites/auroranewsregister.com/themes/news_center/css/ie-mobile-landscape-layout.css
@@ -26,17 +26,12 @@ body.front h1{
 	display: none;
 }
 
-#mobile-logo {
-    display: block;
-    margin-bottom: 9px;
-    padding-top: 13px;
-    text-align: center;
-}
-
 #logo {
-    margin-left: 0;
     margin-top: 10px;
-	display: none;
+		width: 100%;
+}
+#logo img {
+    width: 100%;
 }
 
 #page-wrapper {
@@ -187,10 +182,9 @@ body.front h1{
     background: none repeat-x scroll 0 bottom #333333;
     color: #FFFFFF;
     position: absolute;
-    top: 174px;
-    width: 459px;
+    top: 296px;
+    width: 460px;
     z-index: 200;
-	padding-bottom: 6px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a{    
@@ -269,6 +263,20 @@ body.front h1{
 	height: 295px !important;
 }
 
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-field-rate,
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-comment-count {
+    display: block;
+    visibility: visible;
+}
+
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .views-field-field-rate .field-content {
+    margin-top: 0 !important;
+    float: left;
+}
+
+#views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay .field-content .form-item {
+    margin: 0 !important;
+}
 .bottom-shadow {
     background: url("../images/bottom-shadow.png") repeat-x scroll 0 0 transparent;
     bottom: -6px;
@@ -281,19 +289,16 @@ body.front h1{
 
 .views_slideshow_cycle_main {
     background: none repeat scroll 0 0 #333333;
-    height: 306px;
-    width: 458px;
+    height: 520px;
+    width: 460px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
-    background: none repeat scroll 0 0 #555555;
-    border: medium none;
-    height: 46px;
-    margin-top: -178px;
-    position: absolute;
-    right: 11px;
-    width: 234px;
-    z-index: 500;
+    top: 606px;
+    left: 43px;
+    width: 460px;    		
+		display: flex;
+		justify-content: space-around;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item img {
