--- a/sites/auroranewsregister.com/themes/news_center/css/ie-screen-layout.css
+++ b/sites/auroranewsregister.com/themes/news_center/css/ie-screen-layout.css
@@ -148,8 +148,8 @@ body.front h1{
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame-row-item {
     border: 1px solid #333333;
-    height: 295px;
-    width: 700px;
+    height: 445px;
+    width: 460px;
 	border-bottom: none;
 	overflow: hidden;
 }
@@ -164,7 +164,7 @@ body.front h1{
     color: #FFFFFF;
     position: absolute;
     z-index: 200;
-	width: 700px;
+	width: 460px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .slideshow-overlay a{    
@@ -189,7 +189,7 @@ body.front h1{
    text-decoration: none;   
    text-shadow: 1px 1px 1px #000000;
    color: #FFFFFF;
-   width: 681px;
+   width: 441px;
 }
 
 #views_slideshow_cycle_main_home_page-block .views-slideshow-cycle-main-frame .views-field-body-1 {
@@ -197,7 +197,7 @@ body.front h1{
     display: block;
     padding: 12px;
     text-shadow: 1px 1px 1px #000000;
-    width: 676px;
+    width: 436px;
     z-index: 1;
 }
 
@@ -250,16 +250,19 @@ body.front h1{
 
 
 .views_slideshow_cycle_main {
-    background: none repeat scroll 0 0 #333333;
-    height: 295px;    
-    width: 702px;
+    background: none repeat scroll 0 0 #333333;P    
+		height: 575px;
+		padding-bottom: 0;    
+    width: 462px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom {
-    border: 1px solid #333333;
-    width: 700px;
-	border-top: none;
-	height: 60px;
+    border: none;
+    width: 428px;
+		border-top: none;
+		height: 60px;
+		left: 36px;
+		top: 727px;
 }
 
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item {
@@ -270,7 +273,7 @@ body.front h1{
 .view-id-home_page .views-slideshow-controls-bottom .views-slideshow-pager-field-item.active .selector {
     background: url("../images/slide-active.png") repeat scroll 0 0 transparent;
     height: 27px;
-    margin-left: 38px;
+    margin-left: 17px;
     margin-top: -1px;
     position: absolute;
     width: 66px;
@@ -281,11 +284,11 @@ body.front h1{
     border-right: 1px solid #333333;
     height: 60px;
     overflow: hidden;
-    width: 139px;
+    width: 91px;
 }
 
 #views_slideshow_pager_field_item_bottom_home_page-block_4 .views-field-field-image .views-content-field-image {
-    width: 140px;
+    width: 92px;
 }
 
 
